# ratings

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MERGE_PLAN.md  Makefile  Procfile  README.md  all_rating.py  csv_to_tou.py  docker-compose.yml  manage.py  plan.md  player_stats.py  players.py  pyproject.toml  rating.py  rerate_all.py  simulation.py  stats.py  tournaments.py
.github/workflows/: ci.yml
cocodb/: settings.py  urls.py
cocodb-import/: LICENSE  Procfile  spec.txt
cocodb-import/cocodb/: settings.py  wsgi.py
cocodb-import/memory/: MEMORY.md  feedback_dev_tooling.md
data/: players-list.csv  players.csv  tournaments.csv
players/: forms.py  models.py  urls.py  views.py
results/: 3m-2022-ratings.csv  3m-2022-results.csv  RioRancho-Oct2023-ratings.csv  atx-2022-ratings.csv  atx-2022-results.csv  austin-2023-ratings.csv  austin-2023-results.csv  austin-atx2024-ratings.csv  austin-atx2024-results.csv  austin-atx2025-ratings.csv  austin-atx2025-results.csv  austin-aug2023-ratings.csv  austin-aug2023-results.csv  austin-jun-2023-ratings.csv  austin-jun-2023-results.csv  austin-may-2023-ratings.csv  austin-may-2023-results.csv  austin-sep2023-ratings.csv  austin-sep2023-results.csv  bellingham-may2025-ratings.csv  bellingham-may2025-results.csv  bend-2022-ratings.csv  bend-2022-results.csv  bend-jun2025-ratings.csv  bend-jun2025-results.csv  boston-2022-ratings.csv  boston-2022-results.csv  brattleboro-2022-ratings.csv  brattleboro-2022-results.csv  championscup-2024-ratings.csv  championscup-2024-results.csv  championscup-2025-ratings.csv  championscup-2025-results.csv  charlottesville-2021-ratings.csv  charlottesville-2021-results.tsv  charlottesville-2025-ratings.csv  charlottesville-2025-results.csv  columbia-2023-ratings.csv  columbia-2023-results.csv  columbia-2024-ratings.csv  (+211 more)
scripts/: csv_to_tou.py  player_stats.py  rerate_all.py  simulation.py  stats.py
src/coco_ratings/: cli.py  (+13 more)
testdata/: 20200217_HoodRiver.RT  hoodriver.tou  isropn20.tou  loco-ratings.csv  loco21.csv
tests/: context.py  golden_all_ratings.txt  test_golden.py  test_missing_ratings.py  test_rating.py  test_tou.py
web/: manage.py
(+56 files in other folders)
