[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-ratings"
version = "0.1.0"
description = "Rating software for CoCo tournaments (Norwegian rating system)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.10"]

[project.scripts]
coco-rate = "coco_ratings.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Keep in sync with the code's existing style.
line-length = 88
