[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-ratings"
version = "0.1.0"
description = "Rating software for CoCo tournaments (Norwegian rating system)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "django-types>=0.24.0",
    "ruff>=0.10",
]

[project.scripts]
coco-rate = "coco_ratings.cli:main"

[project.optional-dependencies]
web = [
    "dj-database-url>=3.1.2",
    "django>=5.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Keep in sync with the code's existing style.
line-length = 88

[tool.pyright]
# coco_ratings lives under src/ (editable-installed); the Django app under web/.
extraPaths = ["src", "web"]
venvPath = "."
venv = ".venv"
